<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardResult"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title_Scorecard"
                android:layout_marginTop="130dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/teal_700"
                android:text="@string/result"
                android:textSize="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/score"
                android:textSize="40sp"
                android:layout_below="@+id/title_Scorecard"
                android:layout_marginTop="20dp"
                android:text="@string/score"
                android:layout_marginLeft="160dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp" />
            <TextView
                android:id="@+id/divide"
                android:textSize="40sp"
                android:layout_alignBaseline="@+id/score"
                android:text="@string/_divider"
               android:layout_toRightOf="@+id/score"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/score" />

            <TextView
                android:id="@+id/totalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_toRightOf="@+id/divide"
                android:layout_alignBaseline="@+id/score"
                android:text="@string/outOf"
                android:layout_marginLeft="15dp"
                android:textSize="40sp"
                android:layout_toEndOf="@+id/divide" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>